iniciado extilização do card de pokemons

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.0",
-    "react-native-screens": "^2.8.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-screens": "^2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
