--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.0",
-    "react-native-screens": "^2.8.0"
+    "react-native-screens": "^2.8.0",
+    "react-native-shimmer-placeholder": "^1.0.36"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
