--- a/ios/pokedex/Info.plist
+++ b/ios/pokedex/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Kalam-Bold.ttf</string>
+		<string>Kalam-Light.ttf</string>
+		<string>Kalam-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
